include/xrap_msg.h

typedef struct _xrap_msg_t xrap_msg_t;
//  @interface
//  Create a new xrap_msg
xrap_msg_t *
    xrap_msg_new (int id);
//  Destroy the xrap_msg
void
    xrap_msg_destroy (xrap_msg_t **self_p);
//  Parse a xrap_msg from zmsg_t. Returns a new object, or NULL if
//  the message could not be parsed, or was NULL. Destroys msg and
//  nullifies the msg reference.
xrap_msg_t *
    xrap_msg_decode (zmsg_t **msg_p);
//  Encode xrap_msg into zmsg and destroy it. Returns a newly created
//  object or NULL if error. Use when not in control of sending the message.
zmsg_t *
    xrap_msg_encode (xrap_msg_t **self_p);
//  Receive and parse a xrap_msg from the socket. Returns new object,
//  or NULL if error. Will block if there's no message waiting.
xrap_msg_t *
    xrap_msg_recv (void *input);
//  Receive and parse a xrap_msg from the socket. Returns new object,
//  or NULL either if there was no input waiting, or the recv was interrupted.
xrap_msg_t *
    xrap_msg_recv_nowait (void *input);
//  Send the xrap_msg to the output, and destroy it
int
    xrap_msg_send (xrap_msg_t **self_p, void *output);
//  Send the xrap_msg to the output, and do not destroy it
int
    xrap_msg_send_again (xrap_msg_t *self, void *output);
//  Get the xrap_msg id and printable command
int
    xrap_msg_id (xrap_msg_t *self);
void
    xrap_msg_set_id (xrap_msg_t *self, int id);
//  Get/set the parent field
const char *
    xrap_msg_parent (xrap_msg_t *self);
void
    xrap_msg_set_parent (xrap_msg_t *self, const char *format, ...);
//  Get/set the content_type field
const char *
    xrap_msg_content_type (xrap_msg_t *self);
void
    xrap_msg_set_content_type (xrap_msg_t *self, const char *format, ...);
//  Get/set the content_body field
const char *
    xrap_msg_content_body (xrap_msg_t *self);
void
    xrap_msg_set_content_body (xrap_msg_t *self, const char *format, ...);
//  Get/set the status_code field
uint16_t
    xrap_msg_status_code (xrap_msg_t *self);
void
    xrap_msg_set_status_code (xrap_msg_t *self, uint16_t status_code);
//  Get/set the location field
const char *
    xrap_msg_location (xrap_msg_t *self);
void
    xrap_msg_set_location (xrap_msg_t *self, const char *format, ...);
//  Get/set the etag field
const char *
    xrap_msg_etag (xrap_msg_t *self);
void
    xrap_msg_set_etag (xrap_msg_t *self, const char *format, ...);
//  Get/set the date_modified field
uint64_t
    xrap_msg_date_modified (xrap_msg_t *self);
void
    xrap_msg_set_date_modified (xrap_msg_t *self, uint64_t date_modified);
//  Get/set the metadata field
zhash_t *
    xrap_msg_metadata (xrap_msg_t *self);
//  Get the metadata field and transfer ownership to caller
zhash_t *
    xrap_msg_get_metadata (xrap_msg_t *self);
//  Set the metadata field, transferring ownership from caller
void
    xrap_msg_set_metadata (xrap_msg_t *self, zhash_t **metadata_p);
//  Get/set a value in the metadata dictionary
const char *
    xrap_msg_metadata_string (xrap_msg_t *self,
        const char *key, const char *default_value);
void
    xrap_msg_metadata_insert (xrap_msg_t *self,
        const char *key, const char *format, ...);
//  Get/set the resource field
const char *
    xrap_msg_resource (xrap_msg_t *self);
void
    xrap_msg_set_resource (xrap_msg_t *self, const char *format, ...);
//  Get/set the parameters field
zhash_t *
    xrap_msg_parameters (xrap_msg_t *self);
//  Get the parameters field and transfer ownership to caller
zhash_t *
    xrap_msg_get_parameters (xrap_msg_t *self);
//  Set the parameters field, transferring ownership from caller
void
    xrap_msg_set_parameters (xrap_msg_t *self, zhash_t **parameters_p);
//  Get/set a value in the parameters dictionary
const char *
    xrap_msg_parameters_string (xrap_msg_t *self,
        const char *key, const char *default_value);
void
    xrap_msg_parameters_insert (xrap_msg_t *self,
        const char *key, const char *format, ...);
//  Get/set the if_modified_since field
uint64_t
    xrap_msg_if_modified_since (xrap_msg_t *self);
void
    xrap_msg_set_if_modified_since (xrap_msg_t *self, uint64_t if_modified_since);
//  Get/set the if_none_match field
const char *
    xrap_msg_if_none_match (xrap_msg_t *self);
void
    xrap_msg_set_if_none_match (xrap_msg_t *self, const char *format, ...);
//  Get/set the if_unmodified_since field
uint64_t
    xrap_msg_if_unmodified_since (xrap_msg_t *self);
void
    xrap_msg_set_if_unmodified_since (xrap_msg_t *self, uint64_t if_unmodified_since);
//  Get/set the if_match field
const char *
    xrap_msg_if_match (xrap_msg_t *self);
void
    xrap_msg_set_if_match (xrap_msg_t *self, const char *format, ...);
//  Get/set the status_text field
const char *
    xrap_msg_status_text (xrap_msg_t *self);
void
    xrap_msg_set_status_text (xrap_msg_t *self, const char *format, ...);
//  Self test of this class
void
    xrap_msg_test (bool verbose);